# sign-map-ros2

./: .gitignore  README.md  cuvslam_vggt_strong_coupled.py  generate_loger_logs.py  generate_pi3_logs.py  open_reverse_tunnel.py  pipeline.py  run_cpu_diffusion_exp.sh  run_cpu_diffusion_exp_strictmerge.sh  run_cpu_diffusion_exp_x8_numeric.sh  run_full_pipeline.sh  run_samples_cpu.sh  serve.py
relocal_eval/: cold_start_relocal_eval.py  map_lifecycle_sim.py
ros2_ws/src/sign_map_bridge/: package.xml  setup.cfg  setup.py
ros2_ws/src/sign_map_bridge/config/: sign_map_params.yaml
ros2_ws/src/sign_map_bridge/launch/: sign_map_stack.launch.py
ros2_ws/src/sign_map_bridge/resource/: sign_map_bridge
ros2_ws/src/sign_map_bridge/sign_map_bridge/: frame_ingest_node.py  pipeline_runner_node.py  result_publisher_node.py
