<?xml version="1.0"?>
<package format="3">
  <name>sign_map_bridge</name>
  <version>0.1.0</version>
  <description>ROS2 bridge for sign/object + point-cloud mapping pipeline.</description>
  <maintainer email="dev@example.com">sign-map</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
